fixing word wrap

--- a/style.css
+++ b/style.css
@@ -176,4 +176,10 @@ ul.social-list svg {
   #social {
     padding-bottom: 60px;
   }
+  #seated {
+    width: 95%;
+    max-width: 800px;
+    margin: 40px auto;
+    background: rgba(255,255,255,0.8);
+  }
 }
